--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-data:text/html;<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -374,4 +374,5 @@ data:text/html;<!DOCTYPE html>
     </script>
 </body>
 </html>
+
 
