--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
             <div id="card-specs" class="bg-gray-800 p-5 rounded-xl shadow-lg print-card">
                 <h2 class="text-xl font-semibold mb-4 text-emerald-400">1. Project Specs</h2>
                 
-                <!-- Customer and Date (SWAPPED) -->
+                <!-- Customer and Date (SWAPPED & STYLES UPDATED) -->
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-4 gap-y-2 mb-2 no-print">
                     <div class="grid grid-cols-3 items-center gap-3">
-                         <label for="projectDate" class="col-span-1 font-medium text-gray-300 text-sm">Date</label> 
-                         <input type="date" id="projectDate" class="col-span-2 w-full px-2 py-1 rounded-lg bg-gray-700 border border-gray-600 text-white text-sm font-semibold focus:outline-none focus:ring-2 focus:ring-emerald-500 transition">
+                         <label for="projectDate" class="col-span-1 font-medium text-gray-300">Date</label> 
+                         <input type="date" id="projectDate" class="col-span-2 w-full p-2 rounded-lg bg-gray-700 border border-gray-600 text-white text-base font-semibold focus:outline-none focus:ring-2 focus:ring-emerald-500 transition">
                     </div>
                     <div class="grid grid-cols-3 items-center gap-3">
-                         <label for="customerName" class="col-span-1 font-medium text-gray-300 text-sm">Customer</label> 
-                         <input type="text" id="customerName" placeholder="Enter name" class="col-span-2 w-full px-2 py-1 rounded-lg bg-gray-700 border border-gray-600 text-white text-sm font-semibold focus:outline-none focus:ring-2 focus:ring-emerald-500 transition">
+                         <label for="customerName" class="col-span-1 font-medium text-gray-300">Customer</label> 
+                         <input type="text" id="customerName" placeholder="Enter name" class="col-span-2 w-full p-2 rounded-lg bg-gray-700 border border-gray-600 text-white text-base font-semibold focus:outline-none focus:ring-2 focus:ring-emerald-500 transition">
                     </div>
                 </div>
 
@@ -759,4 +759,8 @@
     </script>
 </body>
 </html>
+"
+This is what I have selected.
+add cost calculation feature to app and print out
+
 
