--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         /* Style for date input in dark mode */
         input[type=date] {
             color-scheme: dark;
+            -webkit-appearance: none; /* Attempt to remove native iOS styling */
+            -moz-appearance: none;
+            appearance: none;
         }
         .output-field {
             background-color: #374151; /* gray-700 */
@@ -163,18 +166,18 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-4 gap-y-2 mb-2 no-print">
                     <div class="grid grid-cols-3 items-center gap-3">
                          <label for="projectDate" class="col-span-1 font-medium text-gray-300">Date</label> 
-                         <input type="date" id="projectDate" class="col-span-2 w-full py-2.5 px-3 rounded-lg bg-gray-700 border border-gray-600 text-white text-base font-semibold focus:outline-none focus:ring-2 focus:ring-emerald-500 transition">
+                         <input type="date" id="projectDate" class="col-span-2 w-full h-11 px-3 rounded-lg bg-gray-700 border border-gray-600 text-white text-base font-semibold focus:outline-none focus:ring-2 focus:ring-emerald-500 transition">
                     </div>
                     <div class="grid grid-cols-3 items-center gap-3">
                          <label for="customerName" class="col-span-1 font-medium text-gray-300">Customer</label> 
-                         <input type="text" id="customerName" placeholder="Enter name" class="col-span-2 w-full py-2.5 px-3 rounded-lg bg-gray-700 border border-gray-600 text-white text-base font-semibold focus:outline-none focus:ring-2 focus:ring-emerald-500 transition">
+                         <input type="text" id="customerName" placeholder="Enter name" class="col-span-2 w-full h-11 px-3 rounded-lg bg-gray-700 border border-gray-600 text-white text-base font-semibold focus:outline-none focus:ring-2 focus:ring-emerald-500 transition">
                     </div>
                 </div>
 
                 <!-- Area Input - Reverted size -->
                 <div class="grid grid-cols-3 items-center gap-3 mb-4"> 
                     <label for="area" class="col-span-1 font-medium text-gray-300">Total Area (ha)</label> 
-                    <input type="number" id="area" value="0" placeholder="0" class="col-span-2 w-full py-2.5 px-3 rounded-lg bg-gray-700 border border-gray-600 text-white text-base font-semibold focus:outline-none focus:ring-2 focus:ring-emerald-500 transition">
+                    <input type="number" id="area" value="0" placeholder="0" class="col-span-2 w-full h-11 px-3 rounded-lg bg-gray-700 border border-gray-600 text-white text-base font-semibold focus:outline-none focus:ring-2 focus:ring-emerald-500 transition">
                 </div>
 
                 <!-- Application Rates -->
